ie9 fixes, scrollbar fixes

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -2072,7 +2072,7 @@ input[type="checkbox"], input[type="radio"] {
     display: block;
     @include transform(translateY(-50%));
     top: 50%;
-    visibility: hidden;
+    display: none;
     opacity: 0;
     width: 100%;
     height: 100%;
@@ -2111,7 +2111,7 @@ input[type="checkbox"], input[type="radio"] {
     }
     &.in {
         z-index: 2;
-        visibility: visible;
+        display: block;
         opacity: 1 !important;
         @include transform(translateY(-50%));
         @include transition(1s, ease-out, all, .5s);
